--- a/SwiftDemo/Base.lproj/LaunchScreen.storyboard
+++ b/SwiftDemo/Base.lproj/LaunchScreen.storyboard
@@ -18,7 +18,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="0fJ-h8-Wmg">
-                                <rect key="frame" x="158.66666666666666" y="388" width="76" height="76"/>
+                                <rect key="frame" x="121.66666666666669" y="351" width="150.00000000000006" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="gIR-UP-Mtf"/>
+                                    <constraint firstAttribute="height" constant="150" id="t4m-Ln-5kl"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -35,7 +39,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launch" width="76" height="76"/>
+        <image name="launch" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
